--- a/packages/esm/package.json
+++ b/packages/esm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alex-taxiera/eslint-config-esm",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "Custom ESLint config for ESM",
   "main": "index.js",
   "keywords": [
@@ -8,6 +8,9 @@
     "eslintconfig",
     "esm"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "Alex Taxiera",
   "license": "ISC",
   "devDependencies": {
