--- a/packages/ts/package.json
+++ b/packages/ts/package.json
@@ -13,8 +13,10 @@
   },
   "author": "Alex Taxiera",
   "license": "ISC",
+  "dependencies": {
+    "@alex-taxiera/eslint-config-esm": "^1.0.0"
+  },
   "devDependencies": {
-    "@alex-taxiera/eslint-config-esm": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "eslint": "^7.3.1",
@@ -27,11 +29,9 @@
     "typescript": "^3.9.5"
   },
   "peerDependencies": {
-    "@alex-taxiera/eslint-config-esm": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "eslint": "^7.3.1",
-    "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-modules-newline": "0.0.4",
     "eslint-plugin-node": "^11.1.0",
