--- a/packages/cjs/package.json
+++ b/packages/cjs/package.json
@@ -1,18 +1,26 @@
 {
   "name": "@alex-taxiera/eslint-config-cjs",
   "version": "1.0.2",
-  "description": "Custom ESLint config for CJS",
   "main": "index.js",
+  "description": "Custom ESLint config for CJS",
   "keywords": [
     "eslint",
     "eslintconfig",
     "cjs"
   ],
+  "author": "Alex Taxiera",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alex-taxiera/eslint-config.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alex-taxiera/eslint-config/issues"
+  },
+  "homepage": "https://github.com/alex-taxiera/eslint-config#readme",
   "publishConfig": {
     "access": "public"
   },
-  "author": "Alex Taxiera",
-  "license": "ISC",
   "dependencies": {
     "eslint-config-standard": "^14.1.1"
   },
