--- a/packages/ts/package.json
+++ b/packages/ts/package.json
@@ -44,7 +44,7 @@
     "eslint-plugin-modules-newline": "0.0.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
     "typescript": ">=3.9.5"
   }
 }
