--- a/packages/ts/package.json
+++ b/packages/ts/package.json
@@ -25,26 +25,26 @@
     "@alex-taxiera/eslint-config-esm": "^1.0.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^3.5.0",
-    "eslint": "^7.3.1",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-modules-newline": "0.0.4",
+    "eslint": "^7.18.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-modules-newline": "^0.0.6",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-standard": "^5.0.0",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.5.0",
-    "@typescript-eslint/parser": "^3.5.0",
-    "eslint": "^7.3.1",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-modules-newline": "0.0.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "typescript": ">=3.9.5"
+    "@typescript-eslint/eslint-plugin": ">=4.14.0",
+    "@typescript-eslint/parser": ">=4.14.0",
+    "eslint": ">=7.18.0",
+    "eslint-plugin-import": ">=2.22.1",
+    "eslint-plugin-modules-newline": ">=0.0.6",
+    "eslint-plugin-node": ">=11.1.0",
+    "eslint-plugin-promise": ">=4.2.1",
+    "eslint-plugin-standard": ">=5.0.0",
+    "typescript": ">=4.1.3"
   }
 }
