--- a/packages/cjs/package.json
+++ b/packages/cjs/package.json
@@ -22,20 +22,20 @@
     "access": "public"
   },
   "dependencies": {
-    "eslint-config-standard": "^14.1.1"
+    "eslint-config-standard": "^16.0.2"
   },
   "devDependencies": {
-    "eslint": "^7.3.1",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint": "^7.18.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^5.0.0"
   },
   "peerDependencies": {
-    "eslint": "^7.3.1",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint": ">=7.18.0",
+    "eslint-plugin-import": ">=2.22.1",
+    "eslint-plugin-node": ">=11.1.0",
+    "eslint-plugin-promise": ">=4.2.1",
+    "eslint-plugin-standard": ">=5.0.0"
   }
 }
