update configs canary

--- a/packages/esm/package.json
+++ b/packages/esm/package.json
@@ -24,20 +24,18 @@
   "dependencies": {
     "@alex-taxiera/eslint-config-cjs": "^1.0.4"
   },
-  "devDependencies": {
-    "eslint": "^7.18.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-modules-newline": "0.0.6",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^5.0.0"
-  },
   "peerDependencies": {
-    "eslint": ">=7.18.0",
-    "eslint-plugin-import": ">=2.22.1",
-    "eslint-plugin-modules-newline": ">=0.0.6",
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": ">=2.25.4",
     "eslint-plugin-node": ">=11.1.0",
-    "eslint-plugin-promise": ">=4.2.1",
-    "eslint-plugin-standard": ">=5.0.0"
+    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-import-newlines": "^1.1.7"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-import-newlines": ">=1.1.7"
   }
 }
