--- a/packages/cjs/package.json
+++ b/packages/cjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alex-taxiera/eslint-config-cjs",
-  "version": "1.0.4",
+  "version": "1.0.5-alpha.1+11bc6c4",
   "main": "index.js",
   "description": "Custom ESLint config for CJS",
   "keywords": [
@@ -22,20 +22,16 @@
     "access": "public"
   },
   "dependencies": {
-    "eslint-config-standard": "^16.0.2"
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0"
   },
   "devDependencies": {
-    "eslint": "^7.18.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^5.0.0"
+    "eslint": "^7.32.0"
   },
   "peerDependencies": {
-    "eslint": ">=7.18.0",
-    "eslint-plugin-import": ">=2.22.1",
-    "eslint-plugin-node": ">=11.1.0",
-    "eslint-plugin-promise": ">=4.2.1",
-    "eslint-plugin-standard": ">=5.0.0"
-  }
+    "eslint": "^7.32.0"
+  },
+  "gitHead": "11bc6c45f1a4d2817213b76c040d233e84ee57bb"
 }
