--- a/packages/ts/package.json
+++ b/packages/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alex-taxiera/eslint-config-ts",
-  "version": "1.3.2",
+  "version": "1.3.3-alpha.1+11bc6c4",
   "main": "index.js",
   "description": "Custom ESLint config for TypeScript",
   "keywords": [
@@ -22,29 +22,29 @@
     "access": "public"
   },
   "dependencies": {
-    "@alex-taxiera/eslint-config-esm": "^1.0.4"
+    "eslint-config-standard-with-typescript": "^21.0.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
-    "eslint": "^7.18.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import-newlines": "^1.1.7",
     "eslint-plugin-modules-newline": "^0.0.6",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^5.0.0",
-    "typescript": "^4.1.3"
+    "eslint-plugin-promise": "^5.2.0",
+    "typescript": "^4.5.5"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": ">=4.14.0",
-    "@typescript-eslint/parser": ">=4.14.0",
-    "eslint": ">=7.18.0",
-    "eslint-plugin-import": ">=2.22.1",
-    "eslint-plugin-modules-newline": ">=0.0.6",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": ">=2.25.4",
+    "eslint-plugin-import-newlines": ">=1.1.7",
     "eslint-plugin-node": ">=11.1.0",
-    "eslint-plugin-promise": ">=4.2.1",
-    "eslint-plugin-standard": ">=5.0.0",
-    "typescript": ">=4.1.3"
-  }
+    "eslint-plugin-promise": "^5.2.0",
+    "typescript": ">=4.5.5"
+  },
+  "gitHead": "11bc6c45f1a4d2817213b76c040d233e84ee57bb"
 }
