--- a/packages/esm/package.json
+++ b/packages/esm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alex-taxiera/eslint-config-esm",
-  "version": "1.0.4",
+  "version": "1.0.5-alpha.1+05d03fe",
   "main": "index.js",
   "description": "Custom ESLint config for ESM",
   "keywords": [
@@ -27,15 +27,16 @@
   "peerDependencies": {
     "eslint": "^7.32.0",
     "eslint-plugin-import": ">=2.25.4",
+    "eslint-plugin-import-newlines": "^1.1.7",
     "eslint-plugin-node": ">=11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-import-newlines": "^1.1.7"
+    "eslint-plugin-promise": "^5.2.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import-newlines": ">=1.1.7",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-import-newlines": ">=1.1.7"
-  }
+    "eslint-plugin-promise": "^5.2.0"
+  },
+  "gitHead": "05d03febf3d05e7d52ba77c515e4b63f44708753"
 }
