--- a/packages/ts/package.json
+++ b/packages/ts/package.json
@@ -22,29 +22,23 @@
     "access": "public"
   },
   "dependencies": {
-    "eslint-config-standard-with-typescript": "^21.0.1"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.32.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-import-newlines": "^1.1.7",
     "eslint-plugin-modules-newline": "^0.0.6",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^4.33.0",
+    "eslint": "^7.32.0",
     "typescript": "^4.5.5"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-import": ">=2.25.4",
-    "eslint-plugin-import-newlines": ">=1.1.7",
-    "eslint-plugin-node": ">=11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "typescript": ">=4.5.5"
+    "typescript": "^4.5.5"
   },
   "gitHead": "05d03febf3d05e7d52ba77c515e4b63f44708753"
 }
