--- a/packages/cjs/package.json
+++ b/packages/cjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alex-taxiera/eslint-config-cjs",
-  "version": "1.0.5-alpha.1+05d03fe",
+  "version": "1.1.0",
   "main": "index.js",
   "description": "Custom ESLint config for CJS",
   "keywords": [
