--- a/packages/ts/package.json
+++ b/packages/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alex-taxiera/eslint-config-ts",
-  "version": "1.3.3-alpha.1+05d03fe",
+  "version": "2.0.0",
   "main": "index.js",
   "description": "Custom ESLint config for TypeScript",
   "keywords": [
@@ -22,13 +22,13 @@
     "access": "public"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-import-newlines": "^1.1.7",
     "eslint-plugin-modules-newline": "^0.0.6",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.33.0"
+    "eslint-plugin-promise": "^5.2.0"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^4.33.0",
