--- a/packages/ts/package.json
+++ b/packages/ts/package.json
@@ -3,6 +3,9 @@
   "version": "2.0.1",
   "main": "index.js",
   "description": "Custom ESLint config for TypeScript",
+  "scripts": {
+    "update:deps": "npx npm-check-updates -u"
+  },
   "keywords": [
     "eslint",
     "eslintconfig",
@@ -22,18 +25,18 @@
     "access": "public"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "eslint-config-standard-with-typescript": "^21.0.1",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-import-newlines": "^1.1.7",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import-newlines": "^1.3.1",
     "eslint-plugin-modules-newline": "^0.0.6",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0"
+    "eslint-plugin-promise": "^6.1.1"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.32.0",
-    "typescript": "^4.5.5"
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "^8.39.0",
+    "typescript": "^5.0.4"
   },
   "peerDependencies": {
     "@typescript-eslint/parser": "^4.33.0",
